kubernetes/applications/hortusfox/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hortusfox
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hortusfox
  template:
    metadata:
      labels:
        app: hortusfox
    spec:
      containers:
        - name: hortusfox
          image: ghcr.io/danielbrendel/hortusfox-web:v5.8
          ports:
            - containerPort: 80
              name: hortusfox-port
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 256Mi
          volumeMounts:
            - name: hortusfox-data
              mountPath: /var/www/html/public/img
              subPath: img
            - name: hortusfox-data
              mountPath: /var/www/html/app/logs
              subPath: logs
            - name: hortusfox-data
              mountPath: /var/www/html/public/backup
              subPath: backup
            - name: hortusfox-data
              mountPath: /var/www/html/public/themes
              subPath: themes
            - name: hortusfox-data
              mountPath: /var/www/html/app/migrations
              subPath: migrations
  volumeClaimTemplates:
    - metadata:
        name: hortusfox-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 16Gi
