kubernetes/applications/hortusfox/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hortusfox-http-route
  namespace: apps
  annotations:
    gethomepage.dev/description: Managing our Plants
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Homelab
    gethomepage.dev/icon: https://github.com/danielbrendel/hortusfox-web/raw/main/public/logo.png
    gethomepage.dev/name: Hortusfox
    gethomepage.dev/pod-selector: "app=hortusfox"
  labels:
    app: hortusfox
spec:
  parentRefs:
    - name: external-gateway
      namespace: kube-system
  hostnames:
    - "plants.mcmumf.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hortusfox-svc
          port: 80
